nginx-deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata: 
    name: nginx-deployment
    namespace: nginx
  spec: 
    replicas: 3
    selector:
      matchLabels:
        app: nginx  
    template:
      metadata: 
        name: nginx-pod
        labels: 
          app: nginx
      spec: 
        containers:
          - name: nginx-container
            image: nginx:latest
            ports:
              - containerPort: 80
