nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-pod1
  labels: 
    team: integerations
    app: todo
spec: 
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
        - containerPort: 80
